# Stage-T epoch-validity settlement guest (v7, tag AEGISPV1): verify the ONE
# aggregation ROOT proof (constant in N — it attests EVERY suffix spend proof),
# then run the E1 structural epoch-validity statement + E3 settled-burn
# accumulator over the re-derived suffix, and journal the exact AEGISPV1 bytes
# the PegVault reconstructs (design 2.2). E2 (aux-PoW share verify) and E4
# (canonical-Ergo anchor) compose in-guest behind the `aux-pow` feature — pulling
# the Ergo primitives into the guest ELF is the design's flagged M-E1 measurement.
[package]
name = "aegis_epoch_guest"
version = "0.0.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ["std", "getrandom"] }
aegis-engine = { path = "../../../engine" }
aegis-recursion = { path = "../../../engine/recursion", default-features = false }
p3-field = "=0.6.1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }

[features]
default = []
# In-guest aux-PoW share verify (E2) + canonical-Ergo anchor linkage (E4).
aux-pow = ["aegis-engine/aux-pow"]

[profile.release]
opt-level = 3
lto = true

# Route sha2 to RISC0's SHA-256 accelerator (SHA-final root verify, I5a).
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.11.0-risczero.0" }
