# Batch Statement-1 settlement guest (I4): verify the ONE aggregation ROOT
# proof in-field (constant in N), check the surfaced withdrawals digest equals
# the digest recomputed from the §1 journal entries (the bind), bind each
# withdrawal's burn note, recompute the tree transition, and journal the exact
# AEGISPB1 bytes the PegVault reconstructs. The root verify links
# p3-circuit-prover's verify path + the aegis/digest table (via aegis-recursion,
# default-features off → the verify path needs no rayon / p3-recursion / rand).
# The verifying data is pinned by the image id (baked engine vk + the recursion
# tower's circuit fingerprint — the latter an I5 vk-pinning item).
[package]
name = "aegis_settlement_guest"
version = "0.0.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ["std", "getrandom"] }
aegis-engine = { path = "../../../engine" }
aegis-recursion = { path = "../../../engine/recursion", default-features = false }
p3-field = "=0.6.1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }

[profile.release]
opt-level = 3
lto = true

# Route sha2 to RISC0's SHA-256 accelerator so the SHA-final root verify (I5a)
# hashes on sys_sha_buffer instead of software SHA. p3-sha256 0.6.1 -> sha2
# 0.11.0; this patch swaps that for RISC0's accelerated fork. Applies to the
# whole guest graph (aegis-recursion's ShaFinalConfig + aegis-engine's SHA
# config). recursion-feasibility.md §7 measured ~4.7x from exactly this lever.
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.11.0-risczero.0" }
